# lantorch

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
resources/: configs.yaml
src/app/: app_config.h  macros.h  main.cpp
src/app/dnn/: dynamic_update_inference_worker.cpp  dynamic_update_inference_worker.h  yolo_inference_worker.cpp  yolo_inference_worker.h
src/app/gst/: gst_pipeline_manager.cpp  gst_pipeline_manager.h
src/app/ui/: main_window.cpp  main_window.h  video_widget.cpp  video_widget.h
src/app/utils/: debug_mode.cpp  debug_mode.h  history.h  numeric_utils.h  stats_tracker.h  time_meter.h
src/dnn/: inference_engine.h  module.h  return_types.h
src/dnn/torchvision/: transforms.h
src/dnn/ultralytics/: indexing.h  nms.cpp  nms.h  transforms.cpp  transforms.h  yolo.cpp  yolo.h
src/dnn/utils/: matcodecs.h  ntuple.h  tensor_utils.h
src/gst/: gst_bin_get_element.cpp  gst_bin_get_element.h  gst_buffer.cpp  gst_buffer.h  gst_buffer_probe.cpp  gst_buffer_probe.h  gst_element_get_pad.h  gst_element_pad_link.cpp  gst_element_pad_link.h  gst_frame_meta.cpp  gst_frame_meta.h  gst_inference_qthread.cpp  gst_inference_qthread.h  gst_inference_sample.cpp  gst_inference_sample.h  gst_inference_thread.cpp  gst_inference_thread.h  gst_probe_utils.h  gst_self_destruct_object.cpp  gst_self_destruct_object.h
src/gst/utils/: video_format.h
src/qt/: ColorPalette  ConstantSizedList  ConstantSizedMap  GraphicsViewOverlayedGstVideoWidget  GraphicsViewOverlayedMediaWidget  GraphicsViewOverlayedWidget  GstVideoWidget  MediaWidget  OverlayContainerWidget  OverlayGraphicsScene  OverlayGraphicsView  OverlayWidget  OverlayedGstVideoWidget  color_palette.cpp  color_palette.h  constant_sized_list.h  constant_sized_map.h  graphics_view_overlayed_gst_video_widget.cpp  graphics_view_overlayed_gst_video_widget.h  graphics_view_overlayed_media_widget.cpp  graphics_view_overlayed_media_widget.h  graphics_view_overlayed_widget.cpp  graphics_view_overlayed_widget.h  gst_types_registration.h  gst_video_widget.cpp  gst_video_widget.h  media_widget.cpp  media_widget.h  overlay_container_widget.cpp  overlay_container_widget.h  overlay_graphics_scene.cpp  overlay_graphics_scene.h  overlay_graphics_view.cpp  overlay_graphics_view.h  overlay_widget.cpp  overlay_widget.h  overlayed_gst_video_widget.cpp  overlayed_gst_video_widget.h
src/qt/overlay_graphics_items/: DetectionBoundingBox  MediaOverlayingGraphicsItem  MediaOverlayingGraphicsItemFactory  MediaOverlayingGraphicsSvgGroupItem  MediaOverlayingGraphicsSvgItem  OverlayGraphicsItem  OverlayGraphicsItemFactory  OverlayGraphicsItemPool  detection_bounding_box.cpp  detection_bounding_box.h  media_overlaying_graphics_item.cpp  media_overlaying_graphics_item.h  media_overlaying_graphics_item_factory.cpp  media_overlaying_graphics_item_factory.h  media_overlaying_graphics_svg_group_item.cpp  (+8 more)
src/std/: enumerate.h  exception.h  function_ptr.h  hash.h  lexical_cast.cpp  lexical_cast.h  private_access.h
src/yaml-cpp/: dnn.h  enum_composer.h  node.h  opencv.h  opencv_yaml.h  qt.h  qt_custom.h  qt_custom_yaml.h  qt_yaml.h  torch.h  torch_yaml.h
(+35 files in other folders)
